<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:background="@drawable/background_hitam">

</android.support.constraint.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pict"
        android:layout_width="395dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        android:src="@drawable/erwin"
        app:civ_border_color="#ffffff"
        app:civ_border_width="3dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_pict">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Antonius Erwin"
            android:textColor="@color/putih"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:gravity="center"
            android:textColor="@color/putih"
            android:text="@string/deskripsi_diri" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient3"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_movie"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/hobby"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/gradient1"
                android:gravity="left">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_noodle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/makes"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_milk"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/mikes"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_internet"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/interest"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_parent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="15sp"
                    android:text="@string/citacita"/>

            </LinearLayout>
        </LinearLayout>

        </LinearLayout>



</android.support.constraint.ConstraintLayout>